2013-05-23  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* ielm.el (ielm-menu): New menu.
	(inferior-emacs-lisp-mode): Set comment-start.

2013-05-23  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* lisp/textmodes/reftex.el (reftex-ref-style-toggle):
	Fix deactivate action.

	* lisp/textmodes/reftex-vars.el (reftex-ref-style-alist):
	Add cleveref macros.

	* lisp/textmodes/reftex-parse.el
	(reftex-locate-bibliography-files): Accept options for
	bibliography commands.
	* lisp/textmodes/reftex-vars.el (reftex-bibliography-commands):
	Add addbibresource.  Basic Biblatex support.

2013-05-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-gvfs.el (top):
	* net/xesam.el (xesam-dbus-unique-names): Suppress D-Bus errors
	when loading package.  (Bug#14447)

2013-05-23  Glenn Morris  <rgm@gnu.org>

	* progmodes/js.el: No need to load comint when compiling.
	(ring-insert, comint-send-string, comint-send-input)
	(comint-last-input-end, ido-chop): Declare.

	* vc/ediff-diff.el, vc/ediff-merg.el: Require ediff-util at run-time.
	* vc/ediff-mult.el: Adjust requires.
	(ediff-directories-internal, ediff-directory-revisions-internal)
	(ediff-patch-file-internal): Declare.
	* vc/ediff-ptch.el: Adjust requires.
	(ediff-use-last-dir, ediff-buffers-internal): Declare.
	(ediff-find-file): Autoload.
	* vc/ediff-util.el: No need to load ediff when compiling.
	(ediff-regions-internal): Declare.
	* vc/ediff-wind.el: Adjust requires.
	(ediff-compute-toolbar-width): Define when compiling.
	(ediff-setup-control-buffer, ediff-make-bottom-toolbar): Declare.
	* vc/ediff.el: No need to load dired, ediff-ptch when compiling.
	(dired-get-filename, dired-get-marked-files)
	(ediff-last-dir-patch, ediff-patch-default-directory)
	(ediff-get-patch-buffer, ediff-dispatch-file-patching-job)
	(ediff-patch-buffer-internal): Declare.

	* emacs-lisp/checkdoc.el: No need to load ispell when compiling.
	(ispell-process, ispell-buffer-local-words, lm-summary)